--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,3 +39,14 @@ body
     font-size: 25px;
 
 }
+
+#post {
+    padding: 1em;
+}
+
+#footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
